Fixing z-index for the highlighted element
#review-17864053 @ankush.bansal

https://gus.lightning.force.com/lightning/r/ADM_Work__c/a07B0000006RLGWIA4/view

@rev ankush.bansal@
BLT: CLI local=false

@precheckin 17866810@

[git-p4: depot-paths = "//app/main/core/ui-interaction-builder-components/": change = 17867187]

--- a/packages/@flow-builder/ui/src/builder_platform_interaction/node/node.css
+++ b/packages/@flow-builder/ui/src/builder_platform_interaction/node/node.css
@@ -9,7 +9,7 @@
     cursor: pointer;
 }
 
-.node-container.jtk-drag-selected, .node-container.jtk-drag.jtk-dragged {
+.node-container.jtk-drag-selected, .node-container.jtk-drag.jtk-dragged, .node-container.highlighted-container {
     z-index: 400;
 }
 
@@ -110,11 +110,11 @@
     padding: 0 3px;
 }
 
-.highlighted + .text-container > div {
+.highlighted-container .text-container > div {
     background: transparent !important;
 }
 
-.highlighted + .text-container:after {
+.highlighted-container .text-container:after {
     content: '';
     position: absolute;
     transition: opacity .15s ease;
